# jafiz

./: .gitignore  Dockerfile  notes
backend/: .env  Cargo.toml  Rocket.toml
backend/.sqlx/: query-106c681202d369a76c43387e89976e7ee80aee74800c2f47461c044fd8b128c0.json  query-fb4c54e1e1bd49bfcb58204d6d7d7ed558cb3e6b21e2d8772fa7cfa80b4a9b6e.json
backend/migrations/: 20240116190314_newTable.sql
backend/src/: main.rs
backend/src/models/: table.rs
backend/src/routes/: tables.rs
frontend/: bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: HomepageView.vue  TableView.vue
frontend/src/router/: index.ts
new_frontend/: Cargo.toml  Rocket.toml
new_frontend/public/: board.html  home.html  template.html
new_frontend/src/: main.rs
new_frontend/src/htmx/: board.rs  index.rs  mod.rs  operations.rs
new_frontend/src/models/: board.rs  mod.rs  orm.rs
