[package]
name = "htmx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "mysql",  "macros"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
validator = { version = "0.16.1", features = ["derive"] }
bcrypt = "0.15.0"
rocket_cors = "0.6.0"
sha2 = "0.10.8"
